--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -482,11 +482,11 @@
 
     <!-- String resource for the font-family to use for the call log activity's title
          Do not translate. -->
-    <string name="call_log_activity_title_font_family">sans-serif-light</string>
+    <string name="call_log_activity_title_font_family" translatable="false">sans-serif-light</string>
 
     <!-- String resource for the font-family to use for the full call history footer
          Do not translate. -->
-    <string name="view_full_call_history_font_family">sans-serif</string>
+    <string name="view_full_call_history_font_family" translatable="false">sans-serif</string>
 
     <!-- Text displayed when the list of incoming calls is empty -->
     <string name="recentIncoming_empty">You have no incoming calls.</string>
